--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bridal Makeup</title>
+    <title>Balabashu</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">-Bridal Makeup-</div>
+      <div class="logo">Balabashu</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -22,7 +22,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">-Bridal Makeup-</div>
+      <div class="logo">Balabashu</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -43,14 +43,14 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, We're</p>
-        <h1 class="title">Bridal Makeup</h1>
+        <h1 class="title">Balabashu</h1>
         <p class="section__text__p2">Student at Kasetsart University</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
             
           >
-            Tel : 0621744034
+            Tel : -
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
@@ -285,7 +285,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="#">Bridal.test@gmail.com</a></p>
+          <p><a href="#">Balabashu.test@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -308,7 +308,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 -Bridal Makeup -. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Balabashu . All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
